[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echogem"
version = "0.1.0"
description = "Intelligent Transcript Processing and Question Answering Library"
readme = "echogem/README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "transcript",
    "chunking", 
    "vector-database",
    "question-answering",
    "ai",
    "nlp",
    "retrieval",
    "pinecone",
    "gemini",
    "langchain"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "google-generativeai>=0.3.0",
    "pinecone-client>=2.2.0",
    "sentence-transformers>=2.2.0",
    "pygame>=2.0.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.5",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
echogem = "echogem.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/echogem"
Documentation = "https://github.com/yourusername/echogem#readme"
Repository = "https://github.com/yourusername/echogem"
"Bug Tracker" = "https://github.com/yourusername/echogem/issues"
"Source Code" = "https://github.com/yourusername/echogem"

[tool.setuptools]
packages = ["echogem"]

[tool.setuptools.package-data]
echogem = ["*.md", "*.txt", "*.json", "*.csv"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pinecone",
    "pygame",
    "sentence_transformers",
    "langchain.*",
    "langchain_google_genai.*",
    "langchain_core.*",
    "langchain_community.*"
]
ignore_missing_imports = true
